sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:19: error: not found: value rbon
  if (i==getTaille()-1||((getCouleur(i+1)==ROUGE)&&rbon(i-1))){
                                                   ^