sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var taille:Int = getTaille()
  var i:Int = 0
  while(!estTrie()){
    for (i <- 0 to taille-1){
      getCouleur(i) match{
        case BLEU => if (!rBon(i)){echange(i,taille-1)}
        case ROUGE =>if (!bBon(i)){echange(i,0)}
      }
    }
    
  }
}



def rBon(i:Int):Boolean = {
  if (i==getTaille()-1||((getCouleur(i+1)==ROUGE)&&rbon(i-1))){
    return true
  }
  else {
    return false
  }
}

def bBon(i:Int):Boolean = {
  if (i==0||((getCouleur(i-1)==BLEU)&&bBon(i-1))){
    return true
  }
  else {
    return false
  }
}

